# openapi.yaml
@@ -56,9 +56,34 @@ paths:
               schema:
                 $ref: "#/components/schemas/Error"
   /{carparkId}:
+    patch:
+      summary: Updated the carpark
+      operationId: updateCarPark
+      tags:
+        - carparks
+      parameters:
+        - name: carparkId
+          in: path
+          required: true
+          description: The id of the carpark to update
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Updated the CarPark
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/CarPark"
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
     get:
       summary: Info for a specific pet
-      operationId: showPetById
+      operationId: getCarParkById
       tags:
         - carparks
       parameters:
