# service/patch.go
@@ -1,0 +1,13 @@
+package service
+
+import "net/http"
+
+// Patch update the carpark from request
+func Patch(w http.ResponseWriter, r *http.Request) {
+
+}
+
+// PatchCarPark update specific carpark
+func (c CarPark) PatchCarPark() {
+
+}
