# service/retrieve.go
@@ -1,8 +1,23 @@
 package service
 
-// GetCarParks gets a list of carparks for the owner
-func GetCarParks() ([]CarPark, error) {
-	c := []CarPark{}
+import "net/http"
 
-	return c, nil
+// RetrieveList gets a list of carparks for the owner
+func RetrieveList(w http.ResponseWriter, r *http.Request){
+	c := CarParkOwner{
+		ID: "tester",
+	}
+	c.ListCarParks()
+}
+
+// Retrieve get the carpark details
+func Retrieve(w http.ResponseWriter, r *http.Request) {
+
+}
+
+// ListCarParks list the carparks
+func (c CarParkOwner) ListCarParks() ([]CarPark, error) {
+	r := []CarPark{}
+
+	return r, nil
 }
